ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    iam.amazonaws.com/permitted: .*
  name: <yourname>
