deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: <yourname>-deployment
  namespace: <yourname>
spec:
  replicas: 2
  selector:
    matchLabels:
      app: <yourname>-app
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: <arn>
      labels:
        app: <yourname>-app
    spec:
      containers:
      - image: simplesite/iampod:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        name: <yourname>-app
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      imagePullSecrets:
      - name: dockerhub-secret
