service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: <yourname>
  name: <yourname>
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: <yourname>-app
